force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/HDT_FulfillmentDateMatrix__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contiene la matrice per il calcolo della data di Decorrenza</description>
    <label>Matrice Data Adempimento</label>
</CustomObject>