force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>