force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>