force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/FulfillmentDateFrom__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentDateFrom__c</fullName>
    <label>Fulfillment Date From</label>
    <type>Date</type>
</CustomField>