force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/FulfillmentDateTo__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentDateTo__c</fullName>
    <label>Fulfillment Date To</label>
    <type>Date</type>
</CustomField>