force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/OriginMarket__c.field-meta.xml
<CustomField>
    <fullName>OriginMarket__c</fullName>
    <label>Origin Market</label>
    <length>50</length>
    <type>Text</type>
</CustomField>