force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Process Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>