force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/SupplyType__c.field-meta.xml
<CustomField>
    <fullName>SupplyType__c</fullName>
    <label>Supply Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>