force-app/main/default/objects/HDT_FulfillmentDateMatrix__c/fields/VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>VoltageLevel__c</fullName>
    <label>Voltage Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>